<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ivan.persondetailsapp.PersonDetailsActivity"
    tools:showIn="@layout/activity_persondetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/personDetailsText"
        android:id="@+id/textView"/>

    <ImageView
        android:layout_width="500px"

        android:layout_height="500px"
        android:id="@+id/imageView"
        android:paddingTop="50px"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:paddingTop="50px"
        android:id="@+id/tableLayout">

        <TableRow
            android:background="#54acdc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80px"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nameText"
                android:id="@+id/textView2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="nametest"
                android:paddingLeft="@dimen/column_padding_left"
                android:id="@+id/textViewName"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastNameText"
                android:id="@+id/textView3"
                android:layout_column="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="last"
                android:paddingLeft="@dimen/column_padding_left"
                android:id="@+id/textViewLastName"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:background="#54acdc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ageText"
                android:id="@+id/textView4"
                android:layout_column="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="age"
                android:paddingLeft="@dimen/column_padding_left"
                android:id="@+id/textViewAge"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/addressText"
                android:id="@+id/textView5"
                android:layout_column="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="addres"
                android:id="@+id/textViewAddress"
                android:paddingLeft="@dimen/column_padding_left"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:background="#54acdc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/postNoText"
                android:id="@+id/textView6"
                android:layout_column="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="post"
                android:paddingLeft="@dimen/column_padding_left"
                android:id="@+id/textViewPostNo"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80px">>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/textViewCustom1"
                android:layout_column="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="cust1"
                android:id="@+id/textViewCust1"
                android:paddingLeft="@dimen/column_padding_left"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:background="#54acdc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80px">>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/textViewCustom2"
                android:layout_column="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="cust2"
                android:id="@+id/textViewCust2"
                android:paddingLeft="@dimen/column_padding_left"
                android:layout_column="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textViewCustom3"
                android:layout_column="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:paddingLeft="@dimen/column_padding_left"
                android:id="@+id/textViewCust3"
                android:layout_column="1"/>
        </TableRow>
    </TableLayout>


</RelativeLayout>
